buscador de farmacias

--- a/css/mapabase.css
+++ b/css/mapabase.css
@@ -7,3 +7,4 @@ body {
     width: 100%;
     background-color: #ffffff
 }
+.titulo {text-align:center; color: (202, 39, 39); border: solid; background-color: 150, 80, 57; width: 70px, 120px;}
